--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@
 @import "variables.css";
 
 /* Components */
+
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -15,4 +17,8 @@
 body {
     color: #2e363e;
     font-family: "Open Sans", sans-serif;
+}
+
+.main-screen {
+    padding: 0px var(--horizontal-space);
 }
