--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -14,4 +14,16 @@
 
 .screen-header__icons span {
     margin-left: 25px;
+    position: relative;
+}
+
+.screen-header__dot{
+    background-color: tomato;
+    width: 6px;
+    height: 6px;
+    border-radius: 3px;
+    display: flex;
+    position: absolute;
+    left: 70px;
+    bottom: 25px;
 }
