--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -16,6 +16,20 @@
     position: relative;
 }
 
+@keyframes rotateCog {
+    from{
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+
+.screen-header__icons .fa-gear:hover {
+    animation: rotateCog 1s linear infinite;
+}
+
+
 .screen-header__dot{
     background-color: tomato;
     width: 6px;
